tests/valid/module/file_module_util_dir.facet
mod util;

fn main() -> affine isize {
  (util::id 1)
}
