tests/invalid/module/file_module_cycle_root.facet
mod cycle_a;

fn main() -> affine isize {
  1
}
